--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -1,4 +1,143 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-  <string name="title_my_food">Mein Essen</string>
+
+    <string name="app_name">BachelorThesis</string>
+    <string name="_105_minutes">… 105 Minuten</string>
+    <string name="_120_minutes">… 120 Minuten</string>
+    <string name="_15_minutes">… 15 Minuten</string>
+    <string name="_30_minutes">… 30 Minuten</string>
+    <string name="_45_minutes">… 45 Minuten</string>
+    <string name="_60_minutes">… 60 Minuten</string>
+    <string name="_75_minutes">… 75 Minuten</string>
+    <string name="_90_minutes">… 90 Minuten</string>
+    <string name="about_the_food">Über das Lebensmittel</string>
+    <string name="active_measurement">Aktive Messung</string>
+    <string name="add_apple_debug">Apfel hinzufügen (Debug)</string>
+    <string name="add_coke_debug">Cola hinzufügen (Debug)</string>
+    <string name="add_pizza_debug">Pizza hinzufügen (Debug)</string>
+    <string name="add_random_measurement_finished">Zufällige Messung hinzufügen (Abgeschlossen)</string>
+    <string name="add_random_measurement_unfinished">Zufällige Messung hinzufügen (Nicht abgeschlossen)</string>
+    <string name="add_sample_user">Beispielnutzer hinzufügen (Debug)</string>
+    <string name="age">Alter</string>
+    <string name="advance_information">Vorinformationen</string>
+    <string name="alcohol_consumed">Alkohol konsumiert</string>
+    <string name="allergies_available">Allergien</string>
+    <string name="amount_consumed">Menge konsumiert</string>
+    <string name="amount_measurements">Anzahl Messungen</string>
+    <string name="analyses">Auswertung</string>
+    <string name="animate_graph">Graph animieren</string>
+    <string name="average">Durchschnitt</string>
+    <string name="average_glucose">Blutzucker (i. D.)</string>
+    <string name="average_increase_glucose">Blutzuckeranstieg (i. D.)</string>
+    <string name="bottom_nav_food">Lebensmittel</string>
+    <string name="bottom_nav_graphs">Diagramme</string>
+    <string name="brand_name">Markenname</string>
+    <string name="carbohydrate">Kohlenhydrate</string>
+    <string name="choose_food">Wähle Lebensmittel aus</string>
+    <string name="chose_date">Wähle Datum</string>
+    <string name="chose_time">Wähle Uhrzeit</string>
+    <string name="clear">Leeren</string>
+    <string name="compare_values">Vergleiche Werte</string>
+    <string name="delete_all_foods">Alle Lebensmittel löschen</string>
+    <string name="delete_all_measurements">Alle Messungen löschen</string>
+    <string name="delete_food">Lebensmittel löschen</string>
+    <string name="delete_measurement">Messung löschen</string>
+    <string name="draw_bar_graph">Balken Diagramm zeichnen</string>
+    <string name="draw_graph">Diagramm zeichnen</string>
+    <string name="draw_line_graph_glucose_increase">Liniendiagramm zeichnen (Blutzuckeranstieg)</string>
+    <string name="draw_line_graph_glucose_over_time">Liniendiagramm zeichnen (Blutzucker über Zeit)</string>
+    <string name="energy_kcal">Energie (kCal)</string>
+    <string name="energy_kj">Energie (kJ)</string>
+    <string name="events">Ereignisse</string>
+    <string name="fat">Fett</string>
+    <string name="fitness_level">Trainingszustand</string>
+    <string name="food_name">Lebensmittelname</string>
+    <string name="general">Allgemein</string>
+    <string name="gi_measurement">GI Messung</string>
+    <string name="glucose_after">Blutzucker nach…</string>
+    <string name="glucose_average">Blutzucker (i. D.)</string>
+    <string name="glucose_increase_avg">Blutzuckeranstieg (i. D.)</string>
+    <string name="glucose_increase_max">Blutzuckeranstieg (Max.)</string>
+    <string name="glucose_max">Blutzucker (Max.)</string>
+    <string name="glucose_max_peak_mg_dl">Blutzucker maximaler Wert (mg/dl)</string>
+    <string name="glucose_mg_dl">Blutzucker (mg/dl)</string>
+    <string name="glucose_values">Blutzuckerwerte</string>
+    <string name="header_glucose_average">Blutzucker Durchschnitt (mg/dl)</string>
+    <string name="header_glucose_increase_average">Blutzuckeranstie Durchschnitt (mg/dl)</string>
+    <string name="header_glucose_increase_max">Blutzuckeranstieg max (mg/dl)</string>
+    <string name="header_glucose_max">Blutzucker max Wert (mg/dl)</string>
+    <string name="height">Höhe</string>
+    <string name="ill_while_measuring">Krank (während Messung)</string>
+    <string name="header_integral">Integral (Fläche)</string>
+    <string name="legal_notifications">Impressum</string>
+    <string name="lifestyle">Lebensstil</string>
+    <string name="line_style">Linienart</string>
+    <string name="max_glucose">Blutzuckerwert (Max.)</string>
+    <string name="max_increase_glucose">Blutzuckeranstieg (Max.)</string>
+    <string name="measurement_date_created">Datum</string>
+    <string name="measurement_estimated_end_time">Erwartete Endzeit</string>
+    <string name="measurement_glucose_after_105_min">Blutzucker nach 105 Minuten</string>
+    <string name="measurement_glucose_after_120_min">Blutzucker nach 120 Minuten</string>
+    <string name="measurement_glucose_after_15_min">Blutzucker nach 15 Minuten</string>
+    <string name="measurement_glucose_after_30_min">Blutzucker nach 30 Minuten</string>
+    <string name="measurement_glucose_after_45_min">Blutzucker nach 45 Minuten</string>
+    <string name="measurement_glucose_after_60_min">Blutzucker nach 60 Minuten</string>
+    <string name="measurement_glucose_after_75_min">Blutzucker nach 75 Minuten</string>
+    <string name="measurement_glucose_after_90_min">Blutzucker nach 90 Minuten</string>
+    <string name="measurement_glucose_at_begin">Blutzucker zu Beginn</string>
+    <string name="measurement_interval">Messungsintervall</string>
+    <string name="measurement_time_started">Startzeit</string>
+    <string name="measurements">Messungen</string>
+    <string name="no_measurement_active">Keine aktive Messung</string>
+    <string name="nutritional_information">Nährwerte</string>
+    <string name="of_which_saturates">gesättigte Fettsäuren</string>
+    <string name="of_which_sugars">davon Zucker</string>
+    <string name="period">Periode</string>
+    <string name="personal_data">Persönliche Daten</string>
+    <string name="personal_index">Persönlicher Index</string>
+    <string name="physically_active2">Physische Akvitivät</string>
+    <string name="physically_active_more_than_usual">Pysisch Aktiv (Mehr als üblich)</string>
+    <string name="protein">Eiweiß</string>
+    <string name="rating">Bewertung</string>
+    <string name="salt">Salz</string>
+    <string name="save">Speichern</string>
+    <string name="select_food">Lebensmittel auswählen</string>
+    <string name="sex">Geschlecht</string>
+    <string name="smoking">Rauchen</string>
+    <string name="sort">sortieren</string>
+    <string name="standard_deviation">Standardabweichung</string>
+    <string name="start_value">Startwert</string>
+    <string name="stress_level">Stressniveau</string>
+    <string name="tab_text_1">Übersicht</string>
+    <string name="tab_text_2">Messung</string>
+    <string name="tab_text_3">Lebensmitteldaten</string>
+    <string name="taking_medication">Medikamente</string>
+    <string name="time_consumed">Konsumierung Startzeit</string>
+    <string name="time_ended">Konsumierung Endzeit</string>
+    <string name="time_information">Zeitinformationen</string>
+    <string name="time_min">Zeit (min)</string>
+    <string name="tired_level">Müdikeitsniveau</string>
+    <string name="tmp_phone">Telefon: 01234/789456</string>
+    <string name="tmp_street">Loremweg 5</string>
+    <string name="type">Typ</string>
+    <string name="unrated">Nicht bewertet</string>
+    <string name="update">Aktualisieren</string>
+    <string name="update_active_measurement_values">Aktualisiere aktive Messwerte</string>
+    <string name="bottom_nav_me">Ich</string>
+    <string name="bottom_nav_home">Start</string>
+    <string name="weight">Gewicht</string>
+    <string name="update_measurement">Messung aktualisieren</string>
+    <string name="add_food">Lebensmittel hinzufügen</string>
+    <string name="food_information">Lebensmittel informationen</string>
+    <string name="add_measurement">Messung hinzufügen</string>
+    <string name="edit_user_data">Benutzerdaten editieren</string>
+    <string name="edit_measurement">Messung editieren</string>
+    <string name="measurement">Messung</string>
+    <string name="edit_food">Lebensmittel editieren</string>
+    <string name="single_food">Einzelnes Lebensmittel</string>
+    <string name="all_foods">Alle Lebensmittel</string>
+    <string name="yes">Ja</string>
+    <string name="no">Nein</string>
+    <string name="minutes_15">15 Minuten</string>
+
 </resources>
